# gallery-dl-webui

./: .cz.toml  .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  mise.toml  mkdocs.yml  pyproject.toml
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml  docker-release.yml  docs.yml  release.yml  tag-release.yml  wiki.yml
api/: main.py
backend/: README.md  gallery_runtime.py  log_hub.py  main.py  pyproject.toml  settings.py  storage.py  worker.py
backend/routers/: downloads.py  health.py
backend/src/backend/: __init__.py  __main__.py  app.py  comic_metadata.py  config.py  database.py  dependencies.py  durations.py  events.py  exceptions.py  gallery.py  live_progress.py  logging_setup.py  main.py  middleware.py  output_dirs.py  poller.py  postprocess.py  progress.py  settings.py  storage.py  tasks.py  worker.py
backend/src/backend/api/: deps.py  schemas.py
backend/src/backend/api/routes/: config.py  downloads.py  library.py  output_dirs.py  targets.py
backend/src/backend/app_config/: constants.py  exceptions.py  router.py  schemas.py  service.py
backend/src/backend/downloads/: capture.py  constants.py  dependencies.py  exceptions.py  gallery.py  models.py  outcomes.py  postprocess.py  progress.py  router.py  schemas.py  service.py  worker.py
backend/src/backend/health/: router.py
backend/src/backend/logs/: router.py
backend/src/backend/maintenance/: komga.py  library_ops.py  live_progress.py  models.py  router.py  schemas.py  service.py  update_check.py  worker.py
backend/src/backend/output_dirs/: router.py  schemas.py  service.py  utils.py
backend/src/backend/realtime/: router.py
backend/src/backend/targets/: dependencies.py  exceptions.py  models.py  poller.py  router.py  schemas.py  service.py  utils.py
backend/tests/: _helpers.py  conftest.py  e2e_server.py  fakes.py  test_api_config.py  test_api_downloads.py  test_api_library.py  test_api_output_dirs.py  test_api_targets.py  test_config.py  test_database.py  test_durations.py  test_events.py  test_live_progress.py  test_middleware.py  test_poller.py  test_postprocess.py  test_progress.py  test_settings.py  test_spa_fallback.py  test_storage.py  test_worker.py  test_worker_resilience.py
backend/tests/app_config/: test_router.py  test_service.py
backend/tests/downloads/: test_capture.py  test_gallery.py  test_live_progress.py  test_outcomes.py  test_postprocess.py  test_progress.py  test_progress_throttle.py  test_router.py  test_service.py  test_worker.py
backend/tests/health/: test_router.py
backend/tests/logs/: test_router.py
backend/tests/maintenance/: test_komga.py  test_library_ops.py  test_live_progress.py  test_router.py  test_service.py  test_update_check.py
backend/tests/output_dirs/: test_router.py  test_utils.py
backend/tests/realtime/: test_router.py
backend/tests/targets/: test_poller.py  test_router.py  test_service.py  test_utils.py
docs/: README.md  architecture.md  backend.md  decisions.md  deployment.md  frontend.md  index.md  lifecycles.md  pipeline.md  testing.md
docs/design/: README.md  components.md  interactions.md  open-questions.md  screens.md  tokens.html  tokens.md
docs/reference/: backend.md  openapi.md
docs/reference/backend/: app_config.md  config.md  database.md  downloads.md  health.md  library.md  output_dirs.md  targets.md
docs/superpowers/plans/: 2026-06-08-ux-copy-refinement.md  (+2 more)
firefox-extension/: README.md  manifest.json
firefox-extension/lib/: api.js  storage.js
firefox-extension/options/: options.css  options.html  options.js
firefox-extension/popup/: popup.css  popup.html  popup.js
frontend/: .gitignore  README.md  biome.json  index.html  openapi-ts.config.ts  package.json  playwright.config.ts  playwright.designshots.config.ts  pnpm-lock.yaml  postcss.config.cjs  typedoc.json  vite.config.ts  vitest.config.ts
frontend/.storybook/: main.ts  preview.tsx
frontend/designshots/: capture.spec.ts
frontend/e2e/: config.spec.ts  downloads.spec.ts  maintenance.spec.ts
frontend/public/: site.webmanifest
frontend/src/: App.test.tsx  App.tsx  main.tsx  theme.ts
scripts/: _proxmox-lib.sh  build-docs.sh  build-wiki.py  dump-openapi.py  gen_http_api.py  gen_index.py  gen_python_ref.py  lxc-update.sh  proxmox-enable-autologin.sh  proxmox-install.sh  proxmox-uninstall.sh  proxmox-update.sh  release-sync-lock.sh
(+109 files in other folders)
