[project]
name = "backend"
version = "1.4.1"
description = "gallery-dl-webui backend"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.21",
    "fastapi[standard]>=0.136.1",
    "gallery-dl>=1.32",
    "httpx>=0.28",
    "jinja2>=3.1.6",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[dependency-groups]
# Repo-level tasks (dev server, lint, format, typecheck, test) live in the
# top-level mise.toml — run them via `mise run <task>`. This group only
# pins the underlying tools.
dev = [
    "httpx>=0.28",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.15.13",
    "ty>=0.0.37",
]
# Build-time only — pydoc-markdown produces the per-module reference for the
# GitHub wiki (CI: .github/workflows/wiki.yml, local: `mise run wiki:build`).
# It must share the backend venv so it can import the live package.
docs = [
    "pydoc-markdown>=4.8",
    # Transitive via pydoc-markdown -> docspec-python; pinned to dodge
    # GHSA-fj7x-q9j7-g6q6 (file write) and GHSA-mc65-7v3q-3vp3 (ReDoS).
    "black>=26.3.1",
]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.ty.src]
include = ["src/backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
